fix : 누락된 쿼리 파라미터 객체 필드 수정